--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
+    "@types/typescript": "^2.0.0",
     "bootstrap": "^4.5.0",
     "css-loader": "^1.0.1",
     "express": "^4.17.1",
