--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
@@ -24,6 +25,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
     "@types/typescript": "^2.0.0",
+    "@types/webpack": "^4.41.25",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.0",
     "css-loader": "^1.0.1",
@@ -42,13 +44,13 @@
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
-    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2"
   }
 }
