--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/bootstrap": "^5.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
@@ -22,12 +23,13 @@
     "@types/passport-http-bearer": "^1.0.36",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^16.14.2",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
     "@types/typescript": "^2.0.0",
     "@types/webpack": "^4.41.25",
     "bcrypt": "^5.0.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.3",
     "css-loader": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -39,6 +41,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^7.3.1",
