--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
